fixed left/right alignments on 1d thumbs

--- a/app/sass/thumb_1d.sass
+++ b/app/sass/thumb_1d.sass
@@ -22,7 +22,7 @@
       // LEFT SIDE
       .left
         +absolute
-        width: 360px
+        width: 352px
 
         // USERNAME + AVATAR
         .user
@@ -57,7 +57,7 @@
 
         // IMAGE
         .image
-          width: 360px
+          width: 352px
           height: 96px
           border-radius-topleft: 16px
           -moz-border-radius-topleft: 16px
@@ -81,7 +81,7 @@
           top: 190px
           left: 4px
           height: 26px
-          width: 352px
+          width: 340px
           .rePost, .date, .starlight
             +center
             +left
@@ -120,7 +120,7 @@
         .divider
           +absolute
           top: 0
-          left: 360px
+          left: 352px
           width: 1px
           height: 220px
           background: #a3a3a5
@@ -131,7 +131,7 @@
       table.right
         +absolute
         +overflow
-        left: 365px
+        left: 358px
         max-height: 212px
         td
           border-spacing: 0
@@ -147,7 +147,7 @@
             width: 320px
             li
               +left
-              margin: 0 0 0 2px
+              margin: 0 2px 0 0
               background: #ccc
               height: 60px
               width: 60px
